# c-kata

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/1-fizz_buzz/: README.md  kata.c  kata.h  test_kata.c
src/10-tennis/: README.md  kata.c  test_kata.c
src/11-gilded_rose/: README.md  kata.c  kata.h  test_kata.c
src/12-raid/: README.md  kata.c  kata.h  test_kata.c
src/14-smelly_tic_tac_toe/: README.md  kata.c  kata.h  test_kata.c
src/15-character_copier/: README.md  kata.c  kata.h  test_kata.c
src/16-esa_mars_rover/: README.md  kata.c  kata.h  test_kata.c
src/17-social_network/: README.md  kata.c  kata.h  test_kata.c
src/18-london_tic_tac_toe/: README.md  kata.c  kata.h  test_kata.c
src/2-leap_year/: README.md  kata.c  kata.h  test_kata.c
src/3-fibonacci/: README.md  kata.c  kata.h  test_kata.c
src/4-stack_kata/: README.md  kata.c  kata.h  test_kata.c
src/5-roman_numerals/: README.md  kata.c  kata.h  test_kata.c
src/6-prime_factors/: README.md  kata.c  kata.h  test_kata.c
src/7-tic_tac_toe/: README.md  kata.c  kata.h  test_kata.c
src/8-yahtzee/: README.md  kata.c  kata.h  test_kata.c
src/9-mars_rover/: README.md  kata.c  kata.h  test_kata.c
